# obsidian-second-brain

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEMOS.md  ECOSYSTEM.md  FORK_INSIGHTS.md  README.md  SKILL.md  _config.yml  architecture.md  install.sh  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
_includes/: head_custom.html
commands/: create-command.md  idea-discovery.md  notebooklm.md  obsidian-architect.md  obsidian-board-hygiene.md  obsidian-board.md  obsidian-brainstorm.md  obsidian-calendar.md  obsidian-capture.md  obsidian-catchup.md  obsidian-challenge.md  obsidian-connect.md  obsidian-daily.md  obsidian-decide.md  obsidian-distill.md  obsidian-emerge.md  obsidian-export.md  obsidian-find.md  obsidian-graduate.md  obsidian-health.md  obsidian-ingest.md  obsidian-init.md  obsidian-learn.md  obsidian-log.md  obsidian-panel.md  obsidian-person.md  obsidian-project.md  obsidian-projects.md  obsidian-recap.md  obsidian-reconcile.md  obsidian-recurring.md  obsidian-retrieval-eval.md  obsidian-review.md  obsidian-save.md  obsidian-synthesize.md  obsidian-task.md  obsidian-visualize.md  obsidian-world.md  podcast.md  research-deep.md  (+5 more)
examples/: README.md
hooks/: hermes-hooks.config.example.yaml  hooks.json  load_vault_context.py  obsidian-bg-agent.sh  obsidian-hermes-session-end.sh  obsidian-recall.py  recall.hook.example.json  validate-ai-first.sh
media/: bootstrap-health.tape  obsidian-save.tape  plugin-install.tape
references/: ai-first-rules.md  claude-md-assistant-template.md  (+4 more)
(+80 files in other folders)
