[project]
name = "obsidian-second-brain-research"
version = "0.6.0"
description = "Research toolkit for obsidian-second-brain — Grok, Perplexity, and YouTube research that saves to your vault"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.2",
    "google-api-python-client>=2.110.0",
    "google-genai>=2.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
